--- a/Internet_Cafe/internet_cafe_app/pom.xml
+++ b/Internet_Cafe/internet_cafe_app/pom.xml
@@ -50,6 +50,14 @@
             <version>12.4.0</version>
         </dependency>
 
+        <!-- Chartfx -->
+        <dependency>
+            <groupId>io.fair-acc</groupId>
+            <artifactId>chartfx</artifactId>
+            <version>11.3.1</version>
+        </dependency>
+
+
 
     </dependencies>
     <build>
