--- a/Internet_Cafe/internet_cafe_app/pom.xml
+++ b/Internet_Cafe/internet_cafe_app/pom.xml
@@ -57,6 +57,14 @@
             <version>11.3.1</version>
         </dependency>
 
+        <!-- mysqlconnector -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.4.0</version>
+        </dependency>
+
+
 
 
     </dependencies>
